--- a/images/Dockerfile.i686-linux-gnu
+++ b/images/Dockerfile.i686-linux-gnu
@@ -7,6 +7,7 @@ RUN sed -i 's/archive.ubuntu.com/mirrors.aliyun.com/g' /etc/apt/sources.list \
   && apt-get update \
   && apt-get install build-essential libtool autotools-dev pkg-config make automake cmake curl python3 patch git -y
 RUN apt-get install g++-multilib binutils-gold bsdmainutils -y
+RUN apt-get install binutils-i686-linux-gnu -y
 
 # Build env
 ENV BUILD_HOST='i686-linux-gnu'
