--- a/images/Dockerfile.aarch64-linux-gnu
+++ b/images/Dockerfile.aarch64-linux-gnu
@@ -11,7 +11,7 @@ RUN apt-get install g++-aarch64-linux-gnu binutils-aarch64-linux-gnu -y
 
 # Build env
 ENV BUILD_HOST='aarch64-linux-gnu'
-ENV BUILD_CFG_ARGS='--prefix=/ -enable-reduce-exports --enable-glibc-back-compat'
+ENV BUILD_ARGS='--prefix=/ -enable-reduce-exports --enable-glibc-back-compat LDFLAGS=-static-libstdc++'
 ENV BUILD_THREADS=8
 
 # Workspace
