--- a/images/Dockerfile.x86_64-linux-gnu
+++ b/images/Dockerfile.x86_64-linux-gnu
@@ -10,7 +10,7 @@ RUN apt-get install g++-multilib binutils-gold bsdmainutils -y
 
 # Build env
 ENV BUILD_HOST='x86_64-linux-gnu'
-ENV BUILD_CFG_ARGS='--prefix=/ -enable-reduce-exports --enable-glibc-back-compat'
+ENV BUILD_ARGS='--prefix=/ -enable-reduce-exports --enable-glibc-back-compat LDFLAGS=-static-libstdc++'
 ENV BUILD_THREADS=8
 
 # Workspace
