--- a/images/Dockerfile.x86_64-linux-gnu
+++ b/images/Dockerfile.x86_64-linux-gnu
@@ -2,10 +2,7 @@ FROM ubuntu:18.04
 Maintainer The BitcoinHD Core developers <master@btchd.org>
 
 # Dependency
-RUN sed -i 's/archive.ubuntu.com/mirrors.aliyun.com/g' /etc/apt/sources.list \
-  && sed -i 's/security.ubuntu.com/mirrors.aliyun.com/g' /etc/apt/sources.list \
-  && apt-get update \
-  && apt-get install build-essential libtool autotools-dev pkg-config make automake cmake curl python3 patch git -y
+RUN apt-get update && apt-get install build-essential libtool autotools-dev pkg-config make automake cmake curl python3 patch git -y
 RUN apt-get install g++-multilib binutils-gold bsdmainutils -y
 
 # Build env
@@ -14,11 +11,9 @@ ENV BUILD_ARGS='--prefix=/ -enable-reduce-exports --enable-glibc-back-compat LDF
 ENV BUILD_THREADS=8
 
 # Workspace
-RUN mkdir -p /workspace
-Volume /workspace
-WorkDir /workspace
+VOLUME /workspace
+WORKDIR /workspace
 
 # Entrypoint
 COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
-RUN chmod +x /usr/local/bin/docker-entrypoint.sh
-ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+ENTRYPOINT ["/bin/sh", "/usr/local/bin/docker-entrypoint.sh"]
